--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">= 7.6.0"
   },
   "now": {
-    "dotenv": "variables.en.now"
+    "dotenv": "variables.env.now"
   },
   "scripts": {
     "start": "node ./start.js",
